--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-body {
+html,body,#root {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 12px;
+  width:100% !important;
+  height:100% !important;
 }
